@@ -1,5 +1,12 @@
 2021-09-27  Yusuke Suzuki  <ysuzuki@apple.com>
 
+        Unreviewed, fix CLoop build part 2
+        https://bugs.webkit.org/show_bug.cgi?id=229223
+
+        * llint/LowLevelInterpreter64.asm:
+
+2021-09-27  Yusuke Suzuki  <ysuzuki@apple.com>
+
         Unreviewed, fix CLoop build
         https://bugs.webkit.org/show_bug.cgi?id=229223
 
